--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Erin\\anaconda3\\envs\\PythonData\\python.exe"
+    "python.pythonPath": "C:\\Users\\ubc\\anaconda3\\envs\\pythonData\\python.exe"
 }
